--- a/packages/contract/package.json
+++ b/packages/contract/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "contracts",
+  "name": "contract",
   "version": "0.0.1",
   "private": "true",
   "scripts": {
@@ -28,5 +28,10 @@
     "ts-node": "^10.4.0",
     "typechain": "^5.2.0",
     "typescript": "^4.5.5"
+  },
+  "dependencies": {
+    "@imtbl/imx-contracts": "^1.0.1",
+    "@openzeppelin/contracts": "^4.4.2",
+    "hardhat-deploy": "^0.9.28"
   }
 }
